<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="408dp"
        android:layout_height="102dp"
        android:background="#223B87"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/correoelectronico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="#00C3B9B9"
            android:backgroundTint="#FFFEFE"
            android:text="@string/correo"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/contraseña"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/correoelectronico"
            app:layout_constraintStart_toEndOf="@+id/correoelectronico"
            app:layout_constraintTop_toTopOf="@+id/correoelectronico" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginTop="6dp"
            android:background="@color/black"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/correoelectronico"
            app:layout_constraintStart_toStartOf="@+id/correoelectronico"
            app:layout_constraintTop_toBottomOf="@+id/correoelectronico" />

        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:shadowColor="@color/black"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/correoelectronico" />

        <Button
            android:id="@+id/entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_entrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/white"
            android:text="@string/check_cerrarsesion"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <TextView
            android:id="@+id/info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:shadowColor="@color/white"
            android:text="@string/info3"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword4"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="627dp"
        android:layout_marginTop="9dp"
        android:background="#747F8FBF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/Registro"
            android:textColor="#15194E"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/comentario"
            android:textColor="#424D89"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registro" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/Nombre"
            android:textColor="#424D89"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comentario" />

        <TextView
            android:id="@+id/Apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Apellidos"
            android:textColor="#424D89"
            app:layout_constraintEnd_toEndOf="@+id/nombre"
            app:layout_constraintStart_toStartOf="@+id/nombre"
            app:layout_constraintTop_toBottomOf="@+id/nombre" />

        <TextView
            android:id="@+id/direccion_c_e"
            android:layout_width="130dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:text="@string/direccion_c_e"
            android:textColor="#424D89"
            app:layout_constraintEnd_toEndOf="@+id/Apellidos"
            app:layout_constraintHorizontal_bias="0.838"
            app:layout_constraintStart_toStartOf="@+id/Apellidos"
            app:layout_constraintTop_toBottomOf="@+id/Apellidos" />

        <TextView
            android:id="@+id/contraseña_nueva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/contraseña_nueva"
            android:textColor="#424D89"
            app:layout_constraintEnd_toEndOf="@+id/direccion_c_e"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="@+id/direccion_c_e"
            app:layout_constraintTop_toBottomOf="@+id/direccion_c_e" />

        <TextView
            android:id="@+id/Sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Sexo"
            android:textColor="#424D89"
            app:layout_constraintEnd_toEndOf="@+id/contraseña_nueva"
            app:layout_constraintStart_toStartOf="@+id/contraseña_nueva"
            app:layout_constraintTop_toBottomOf="@+id/contraseña_nueva" />

        <TextView
            android:id="@+id/Fechadenac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Fechadenac"
            android:textColor="#424D89"
            app:layout_constraintEnd_toEndOf="@+id/Sexo"
            app:layout_constraintStart_toStartOf="@+id/Sexo"
            app:layout_constraintTop_toBottomOf="@+id/Sexo" />

        <TextView
            android:id="@+id/inform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/info"
            android:textColor="#4E6CC5"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editTextDate"
            app:layout_constraintStart_toEndOf="@+id/Fechadenac"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <Button
            android:id="@+id/Registrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/btn_registrate"
            app:layout_constraintBottom_toTopOf="@+id/coment2"
            app:layout_constraintEnd_toEndOf="@+id/coment2"
            app:layout_constraintStart_toStartOf="@+id/coment2" />

        <TextView
            android:id="@+id/coment2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/coment2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/caja_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="text"
            android:shadowColor="@color/black"
            android:text="@string/caja_nombre"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/nombre"
            app:layout_constraintStart_toEndOf="@+id/nombre"
            app:layout_constraintTop_toTopOf="@+id/nombre" />

        <EditText
            android:id="@+id/caja_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="text"
            android:text="@string/caja_apellidos"
            app:layout_constraintBottom_toBottomOf="@+id/Apellidos"
            app:layout_constraintEnd_toEndOf="@+id/caja_nombre"
            app:layout_constraintStart_toStartOf="@+id/caja_nombre"
            app:layout_constraintTop_toBottomOf="@+id/caja_nombre" />

        <EditText
            android:id="@+id/caja_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@+id/direccion_c_e"
            app:layout_constraintEnd_toEndOf="@+id/caja_apellidos"
            app:layout_constraintStart_toStartOf="@+id/caja_apellidos"
            app:layout_constraintTop_toTopOf="@+id/direccion_c_e" />

        <EditText
            android:id="@+id/caja_contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/contraseña_nueva"
            app:layout_constraintEnd_toEndOf="@+id/caja_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/caja_email"
            app:layout_constraintTop_toTopOf="@+id/contraseña_nueva"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/check_hombre"
            app:layout_constraintBottom_toBottomOf="@+id/Sexo"
            app:layout_constraintStart_toStartOf="@+id/caja_contraseña"
            app:layout_constraintTop_toTopOf="@+id/Sexo" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/check_mujer"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox3"
            app:layout_constraintStart_toEndOf="@+id/checkBox3"
            app:layout_constraintTop_toTopOf="@+id/checkBox3" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="@+id/Fechadenac"
            app:layout_constraintStart_toEndOf="@+id/Fechadenac"
            app:layout_constraintTop_toTopOf="@+id/Fechadenac" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>